Fixed helpButton (wasn't working before)